# api_scaffold

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  conftest.py  debug.ipynb  env.tmpl  fly.exampleproject-api-prod.toml  fly.exampleproject-api-staging.toml  justfile  pyproject.toml
.github/workflows/: deploy_app_prod.yml  deploy_exampleproject-api-prod.yml  deploy_exampleproject-api-staging.yml
alembic/: env.py
alembic/versions/: 2024_07_06_1925-2c3f45b58070_add_apikey.py  2024_07_08_1903-7b7b5faab06d_add_basic_rbac.py  2024_07_08_1915-5cf53d945859_make_timestamps_nullable.py  2024_07_08_1920-d63ff5877d9c_make_timestamps_default.py  2024_07_08_1929-07b20d80aa77_ids_should_autogenerate.py  2024_07_08_2000-06721081382c_key_should_autogenerate.py  2024_07_08_2310-bb004175a374_more_constraints.py  2024_07_09_1755-5d696a2543cd_init.py
app/: main.py
app/core/: auth.py  config.py  log.py
app/core/db/: middleware.py  session.py
app/mod/: api.py  crud.py  models.py
app/mod/core/api_keys/: model.py
app/mod/core/keys/: model.py
app/mod/core/org/: model.py
app/mod/core/project/: model.py
app/mod/core/role/: model.py
app/mod/core/user/: model.py
app/mod/meta/: crud.py  model.py  router.py  schema.py
app/mod/rbac/: README.md
app/mod/rbac/ent/: crud.py  model.py
app/mod/rbac/role/: crud.py  model.py
app/mod/rbac/user/: crud.py  model.py
app/modules/: api.py  crud.py
app/modules/api_keys/: crud.py  model.py  router.py  schema.py  service.py
app/modules/base/: crud.py  model.py  router.py  schema.py  service.py
app/utils/: imports.py  timer.py
scripts/: crud.py  sync_gh_vars.zsh
supabase/: config.toml
supabase/migrations/: 20240709064033_rbac_support.sql
test/: test_main.py
test/modules/: test_api_key.py
